Fix errors on safari browser

--- a/src/theme/styles/globals.css
+++ b/src/theme/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
 @layer base {
     html,
     body,
@@ -11,6 +13,15 @@
         font-family: 'Comfortaa', cursive;
         background-color: #fff7ef;
     }
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff7ef;
+    font-family: 'Comfortaa', cursive;
 }
 
 img,
